Remove emojis from print statements in notebook

--- a/completerag.ipynb
+++ b/completerag.ipynb
@@ -74,7 +74,7 @@
     "    return '\\n'.join(cleaned_lines)\n",
     "\n",
     "def ingest_and_clean_pdfs(pdf_dir: str):\n",
-    "    print(f\"🔍 Looking for PDFs in: {pdf_dir}\")\n",
+    "    print(f\"Looking for PDFs in: {pdf_dir}\")\n",
     "\n",
     "    if not os.path.exists(pdf_dir):\n",
     "        raise FileNotFoundError(f\"Directory not found: {pdf_dir}\")\n",
@@ -86,7 +86,7 @@
     "        if f.lower().endswith(\".pdf\")\n",
     "    ]\n",
     "\n",
-    "    print(f\"📄 Found {len(pdf_files)} PDF files.\\n\")\n",
+    "    print(f\" Found {len(pdf_files)} PDF files.\\n\")\n",
     "    if not pdf_files:\n",
     "        print(\" No PDF files found. Please add PDFs to the data directory.\")\n",
     "        return [], []\n",
@@ -121,7 +121,7 @@
     "        print(f\"Skipped {len(failed_files)} corrupted files: {failed_files}\")\n",
     "\n",
     "    # Split documents into chunks\n",
-    "    print(\"\\n🔪 Splitting documents into chunks...\")\n",
+    "    print(\"\\n Splitting documents into chunks...\")\n",
     "    splitter = RecursiveCharacterTextSplitter(\n",
     "        chunk_size=800,\n",
     "        chunk_overlap=150,\n",
@@ -158,7 +158,7 @@
    "outputs": [],
    "source": [
     "# Create Vector Database with Cleaned Content\n",
-    "print(\"\\n🔄 Creating vector database with CLEANED content...\")\n",
+    "print(\"\\n Creating vector database with CLEANED content...\")\n",
     "\n",
     "persist_dir = \"data/chroma_db\"\n",
     "os.makedirs(persist_dir, exist_ok=True)\n",
@@ -221,7 +221,7 @@
     "    do_sample=True,\n",
     ")\n",
     "\n",
-    "def smart_rag_query(question, num_docs=8):  # ⬅️ Increased from 4 → 8 (Option 2)\n",
+    "def smart_rag_query(question, num_docs=8):  #  Increased from 4 → 8 (Option 2)\n",
     "    \"\"\"\n",
     "    Enhanced RAG with better context handling and deeper document retrieval.\n",
     "    \"\"\"\n",
@@ -326,7 +326,7 @@
    "outputs": [],
    "source": [
     "# Interactive Query System\n",
-    "print(\"\\n💬 INTERACTIVE QUERY SYSTEM\")\n",
+    "print(\"\\n INTERACTIVE QUERY SYSTEM\")\n",
     "print(\"Type 'quit' to exit, 'sources' to see database info\\n\")\n",
     "\n",
     "while True:\n",
@@ -336,7 +336,7 @@
     "        print(\" Goodbye!\")\n",
     "        break\n",
     "    elif user_query.lower() == 'sources':\n",
-    "        print(f\"📊 Database Info:\")\n",
+    "        print(f\" Database Info:\")\n",
     "        print(f\"   - Total vectors: {vectordb._collection.count()}\")\n",
     "        print(f\"   - Location: {persist_dir}\")\n",
     "        continue\n",
